--- a/styles/architects.css
+++ b/styles/architects.css
@@ -136,6 +136,20 @@ main > section{
     margin-bottom: 100px;
 }
 
+/* sponsor related styles */
+.sopnsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
+
 /* responsive media query */
 @media screen and (max-width: 576px) {
     .navbar, 
@@ -144,8 +158,19 @@ main > section{
         flex-direction: column;
     }
 
-    .team-img-container{
+    .team-img-container, 
+    .facts-container,
+    .sponsor-companies
+    {
         grid-template-columns: repeat(1, 1fr);
+    }
+    .facts-container{
+        justify-items: center;
+        gap: 24px;
+    }
+    .sponsor-companies{
+        justify-items: center;
+        gap: 50px;
     }
     .out-features{
         margin-left: 20px;
@@ -159,5 +184,10 @@ main > section{
     }
     .out-features{
         margin: 50px auto;
+    }
+    .sponsor-companies, .facts-container{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px;
+        justify-items: center;
     }
 }
